@@ -40,7 +40,9 @@
     <div class="row">
         <h4>Occasionally Asked Questions</h4>
         <p>
-            These are questions that I occasionally get asked or I see pop up in a Google query string.<br/>
+            These are questions that I occasionally get asked or I see pop up in a Google query string.
+        </p>
+        <p>
             If you are trying to figure out something using Swaks, drop me a line at <a href="mailto:proj-swaks@jetmore.net">proj-swaks@jetmore.net</a>.  Swaks is a low-traffic project and I enjoy making it better, whether it's docs or code or just giving a hint in an email.
         </p>
         <p><a href="./index.html">return to main page</a></p>
@@ -136,8 +138,7 @@ swaks --add-header "X-Test-Header: foo"
         <div class="ten columns">
             <h5>How do I install on Mac OS X?</h5>
             <p>
-                Copy and paste or right-click, save-as works great for me.  If you prefer a package manager,
-                both <a href="http://www.macports.org/">MacPorts</a> and <a href="http://brew.sh/">Homebrew</a> provide Swaks.
+                See <a href='installation.html'>installation page</a>.
             </p>
         </div>
     </div>
@@ -149,9 +150,7 @@ swaks --add-header "X-Test-Header: foo"
         <div class="ten columns">
             <h5>How do I install on Windows?</h5>
             <p>
-                Swaks has been tested much less on Windows than Mac OS X or Linux (or even Solaris, Swaks' birth-OS),
-                but it has worked when I tested it.  I installed ActiveState Perl, saved the latest version of Swaks as swaks.pl,
-                and used ppm to install Perl modules.  It worked fine for me, but if you are having specific issues let me know.
+                See <a href='installation.html'>installation page</a>.
             </p>
         </div>
     </div>
