@@ -33,18 +33,6 @@
 
 <div class="container">
     <div class="row">
-        <!--
-        <p>
-        <a href="index.html">Main</a> ::
-        <a href="about.html">About</a> ::
-        <a href="download.html">Download</a> ::
-        <a href="docs.html">Documentation</a> ::
-        <a href="contact.html">Interact</a>
-        </p>
-        -->
-    </div>
-
-    <div class="row">
         <h4>About</h4>
         <p>
             Swaks is a featureful, flexible, scriptable, transaction-oriented SMTP test tool written
@@ -65,7 +53,12 @@
     <div class="row">
         <h4>Download</h4>
         <p>
-            The latest version of Swaks is <b>20190914.0</b> (<a href="https://www.jetmore.org/john/blog/2019/09/swaks-release-20190914-0-available/">announcement</a>), which can be downloaded as a <a href="files/swaks-20190914.0.tar.gz">package</a> or a <a href="files/swaks-20190914.0/swaks">standalone script</a>.<p/>
+            The latest version of Swaks is <b>20190914.0</b> (<a href="https://www.jetmore.org/john/blog/2019/09/swaks-release-20190914-0-available/">announcement</a>), which can be downloaded as a <a href="files/swaks-20190914.0.tar.gz">package</a> or a <a href="files/swaks-20190914.0/swaks">standalone script</a>.
+        </p>
+        <p>
+            See the <a href="installation.html">installation page</a> for details on installing in multiple environments.
+        <p/>
+        <p>
             The <a href="versions.html">versions page</a> lists every released version of Swaks, complete with changelogs and download links.
         </p>
     </div>
