@@ -1,51 +1,0 @@
-=pod
-
-=head1 Swaks - Multiple installation methods
-
-Swaks is ready to be consumed via multiple package managers
-
-=head1 Homebrew - MacOS
-
-=over 4
-
-  $ brew info swaks
-  swaks: stable 20170101.0
-  SMTP command-line test tool
-  https://www.jetmore.org/john/code/swaks/
-  /usr/local/Cellar/swaks/20170101.0 (5 files, 182.7KB) *
-    Built from source on 2019-03-21 at 18:19:53
-  From: https://github.com/Homebrew/homebrew-core/blob/master/Formula/swaks.rb
-  ==> Analytics
-  install: 230 (30 days), 577 (90 days), 1,938 (365 days)
-  install_on_request: 230 (30 days), 567 (90 days), 1,866 (365 days)
-  build_error: 0 (30 days)
-  $ brew install swaks
-
-=back
-
-=head1 apt - Ubuntu
-
-=over 4
-
-  # apt show swaks
-  Package: swaks
-  Version: 20170101.0-2
-  Priority: optional
-  Section: universe/mail
-  Origin: Ubuntu
-  Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
-  Original-Maintainer: Andreas Metzler <ametzler@debian.org>
-  Bugs: https://bugs.launchpad.net/ubuntu/+filebug
-  Installed-Size: 226 kB
-  Depends: perl
-  Recommends: libnet-dns-perl, libnet-ssleay-perl
-  Suggests: perl-doc, libauthen-sasl-perl, libauthen-ntlm-perl
-  Homepage: http://www.jetmore.org/john/code/swaks/
-  Download-Size: 69.7 kB
-  APT-Sources: http://archive.ubuntu.com/ubuntu bionic/universe amd64 Packages
-  Description: SMTP command-line test tool
-  # apt install swaks -y
-
-=back
-
-=cut
