@@ -50,7 +50,7 @@
         -->
     </div>
     <div class="row">
-        <b>Versions</b>
+        <h4>Versions</h4>
         <p>
           This page lists every official release of Swaks, from newest to oldest.  All releases include that version's Changes,
           and newer releases also include a change summary.
